fixed contrast issues

--- a/mockup-style.css
+++ b/mockup-style.css
@@ -58,7 +58,7 @@
    position: absolute;
    bottom: 1%;
    right: 1%;
-   color: white;
+   color: gold;
    text-align: right;
    font-size: 15px;
  }
@@ -105,7 +105,7 @@
 }
 
 .projects{
-   background-color: gray;
+   background-color: rgb(94, 94, 94);
    color: gold;
    font-size: 16px;
    margin: 0 auto
@@ -134,7 +134,7 @@
    padding: 2px 5px;
    margin: 5px;
    list-style: none;
-   border: solid navy;
+   background-color:  navy;
 }
 
 .project-info a{
